# ghc-imported-from

./: .gitignore  ChangeLog  GhcImportedFrom.hs  LICENSE  Main.hs  README.md  UtilsFromGhcMod.hs  build_in_sandbox.sh  build_in_sandbox_scratch.sh  cabal.config  changelog.md  cp_to_dockers.sh  ghc-imported-from.cabal  quick_rebuild.sh  run_tests_cabal_sandbox.sh  run_tests_stack.sh  stack.yaml
Language/Haskell/: GhcImportedFrom.hs
Language/Haskell/GhcImportedFrom/: Types.hs  UtilsFromCabalInstall.hs  UtilsFromGhcMod.hs
docker-testsuite/: README.md
docker-testsuite/debian-cabal/: Dockerfile  build.sh  build_and_test.sh  go.sh
docker-testsuite/debian-stack/: Dockerfile  build.sh  build_and_test.sh  go.sh  sources.list
docker-testsuite/fedora-cabal/: README.md  ___Dockerfile  build.sh  build_and_test.sh  go.sh
docker-testsuite/fedora-stack/: Dockerfile  build.sh  go.sh
docker-testsuite/ubuntu-cabal/: Dockerfile  build.sh  build_and_test.sh  go.sh
docker-testsuite/ubuntu-stack/: Dockerfile  build.sh  build_and_test.sh  go.sh
src/: Main.hs  fake-ghc-for-ghc-imported-from.hs
test/: Dir.hs  ImportedFromSpec.hs
test/data/: Hiding.hs  When.hs
test/data/project/: clean.sh  test_add_sourced_tree.sh
test/data/project/A/: A.cabal  A.hs
test/data/project/B/: B.cabal  B.hs
test/data/reexport-example/: README.md
test/data/reexport-example/reexport/: Bar.hs  Foo.hs  Main.hs  reexport.cabal
test/data/reexport-example/usingreexport/: Main.hs  usingreexport.cabal
tests/: Hiding.hs  Muddle.hs  tests-in-plain-cabal-install.sh  tests-in-sandbox.sh  tests-plain.out  tests.out  tests.sh  update_output.md  update_output.sh  update_output.txt
