name:                ghc-imported-from
version:             0.1.0.1
synopsis:            Find the Haddock documentation for a symbol.
description:         Given a Haskell module and symbol, determine the URL to the Haddock documentation
                     for that symbol.
homepage:            https://github.com/carlohamalainen/ghc-imported-from
license:             BSD3
license-file:        LICENSE
author:              Carlo Hamalainen
maintainer:          carlo@carlo-hamalainen.net
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

extra-source-files:  test/*.hs
                     test/data/*.hs

library
    exposed-modules: Language.Haskell.GhcImportedFrom
    other-modules:   Language.Haskell.GhcImportedFrom.UtilsFromGhcMod

    other-extensions:    CPP, Rank2Types
    build-depends: base >=4.6 && <4.7
                 , syb >=0.4 && <0.5
                 , ghc >=7.6 && <7.7
                 , ghc-paths >=0.1 && <0.2
                 , ghc-syb-utils
                 , ghc-mod >= 3.1.5
                 , filepath
                 , safe
                 , process
                 , directory
                 , containers >= 0.5.0.0 && <= 0.5.0.0
                 , mtl
                 , transformers
    if impl(ghc < 7.7)
      Build-Depends:  Cabal >= 1.10 && < 1.17
    else
      Build-Depends:  Cabal >= 1.18

    default-language:    Haskell2010

executable ghc-imported-from
  main-is:             Main.hs
  GHC-Options:         -Wall
  -- other-modules:
  other-extensions:    CPP, Rank2Types
  build-depends: base >=4.6 && <4.7
               , syb >=0.4 && <0.5
               , ghc >=7.6 && <7.7
               , ghc-paths >=0.1 && <0.2
               , ghc-syb-utils
               , ghc-mod >= 3.1.5
               , ghc-imported-from
               , filepath
               , safe
               , process
               , directory
               , containers >= 0.5.0.0 && <= 0.5.0.0
               , mtl
               , transformers
  if impl(ghc < 7.7)
      Build-Depends:  Cabal >= 1.10 && < 1.17
  else
      Build-Depends:  Cabal >= 1.18

  hs-source-dirs:   src
  default-language:    Haskell2010

Test-Suite spec
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Main-Is:              Spec.hs
  Hs-Source-Dirs:       test, .
  Type:                 exitcode-stdio-1.0
  Other-Modules:        Dir
                        ImportedFromSpec
  Build-Depends:        base >=4.6 && <4.7
                      , syb >=0.4 && <0.5
                      , ghc >=7.6 && <7.7
                      , ghc-paths >=0.1 && <0.2
                      , ghc-syb-utils
                      , ghc-mod >= 3.1.5
                      , filepath
                      , safe
                      , process
                      , directory
                      , containers >= 0.5.0.0 && <= 0.5.0.0
                      , mtl
                      , transformers
                      , hspec
  if impl(ghc < 7.7)
      Build-Depends:  Cabal >= 1.10 && < 1.17
  else
      Build-Depends:  Cabal >= 1.18

