name:                ghc-imported-from
version:             0.2.0.1
synopsis:            Find the Haddock documentation for a symbol.
description:         Given a Haskell module and symbol, determine the URL to the Haddock documentation
                     for that symbol.
homepage:            https://github.com/carlohamalainen/ghc-imported-from
license:             BSD3
license-file:        LICENSE
author:              Carlo Hamalainen
maintainer:          carlo@carlo-hamalainen.net
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  README.md changelog.md

cabal-version:       >=1.10

extra-source-files:  test/*.hs
                     test/data/*.hs

library
    exposed-modules: Language.Haskell.GhcImportedFrom
    other-modules:   Language.Haskell.GhcImportedFrom.UtilsFromGhcMod
                     Language.Haskell.GhcImportedFrom.Types

    other-extensions:    CPP, Rank2Types
    build-depends: base >=4.6 && <4.8
                 , syb
                 , ghc
                 , ghc-paths
                 , ghc-syb-utils
                 , ghc-mod
                 , filepath
                 , safe
                 , process
                 , directory
                 , containers
                 , mtl
                 , transformers
    if impl(ghc < 7.7)
      Build-Depends:  Cabal >= 1.10 && < 1.17
    else
      Build-Depends:  Cabal >= 1.18

    default-language:    Haskell2010

executable fake-ghc-for-ghc-imported-from
  main-is:          fake-ghc-for-ghc-imported-from.hs
  GHC-Options:      -Wall
  hs-source-dirs:   src
  build-depends: base >=4.6 && <4.8
               , process
  default-language:  Haskell2010

executable ghc-imported-from
  main-is:             Main.hs
  GHC-Options:         -Wall
  other-modules:        Paths_ghc_imported_from
  other-extensions:    CPP, Rank2Types
  build-depends: base >=4.6 && <4.8
               , syb
               , ghc
               , ghc-paths
               , ghc-syb-utils
               , ghc-mod
               , ghc-imported-from
               , filepath
               , safe
               , process
               , directory
               , containers
               , mtl
               , transformers
               , hspec

  if impl(ghc < 7.7)
      Build-Depends:  Cabal >= 1.10 && < 1.17
  else
      Build-Depends:  Cabal >= 1.18

  hs-source-dirs:   src
  default-language:    Haskell2010

Test-Suite spec
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Main-Is:              Spec.hs
  Hs-Source-Dirs:       test, .
  Type:                 exitcode-stdio-1.0
  Other-Modules:        Dir
                        ImportedFromSpec
  Build-Depends:        base >=4.6 && <4.8
                      , syb
                      , ghc
                      , ghc-paths
                      , ghc-syb-utils
                      , ghc-mod
                      , filepath
                      , safe
                      , process
                      , directory
                      , containers
                      , mtl
                      , transformers
                      , hspec
  if impl(ghc < 7.7)
      Build-Depends:  Cabal >= 1.10 && < 1.17
  else
      Build-Depends:  Cabal >= 1.18
