name:                ghc-imported-from
version:             0.3.0.4
synopsis:            Find the Haddock documentation for a symbol.
description:         Given a Haskell module and symbol, determine the URL to the Haddock documentation
                     for that symbol.
homepage:            https://github.com/carlohamalainen/ghc-imported-from
license:             BSD3
license-file:        LICENSE
author:              Carlo Hamalainen
maintainer:          carlo@carlo-hamalainen.net
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  README.md changelog.md stack.yaml

cabal-version:       >=1.10

extra-source-files:  test/*.hs
                     test/data/*.hs

library
    GHC-Options:         -Wall
    exposed-modules: Language.Haskell.GhcImportedFrom
    other-modules:   Language.Haskell.GhcImportedFrom.UtilsFromGhcMod
                     Language.Haskell.GhcImportedFrom.Types

    other-extensions:    CPP, Rank2Types
    build-depends: base >=4.0 && <5
                 , syb
                 , ghc
                 , ghc-paths
                 , ghc-syb-utils
                 , ghc-mod == 5.5.0.0
                 , monad-journal
                 , filepath
                 , safe
                 , bytestring
                 , process
                 , process-streaming >= 0.9.0.0
                 , directory
                 , containers
                 , mtl
                 , transformers
                 , parsec
                 , optparse-applicative
                 , haddock-api
                 , hspec
                 , hspec-discover
                 , exceptions
                 , pipes-transduce < 0.3.4.0
    if impl(ghc < 7.7)
      Build-Depends:  Cabal >= 1.10 && < 1.17
    else
      Build-Depends:  Cabal >= 1.18

    default-language:    Haskell2010

executable fake-ghc-for-ghc-imported-from
  main-is:          fake-ghc-for-ghc-imported-from.hs
  GHC-Options:      -Wall
  hs-source-dirs:   src
  build-depends: base >=4.0 && <5
               , process
               , process-streaming >= 0.9.0.0
  default-language:  Haskell2010

executable ghc-imported-from
  main-is:             Main.hs
  GHC-Options:         -Wall
  other-modules:        Paths_ghc_imported_from
  other-extensions:    CPP, Rank2Types
  build-depends: base >=4.0 && <5
               , syb
               , ghc
               , ghc-paths
               , ghc-syb-utils
               , ghc-mod == 5.5.0.0
               , monad-journal
               , ghc-imported-from
               , filepath
               , safe
               , bytestring
               , process
               , process-streaming >= 0.9.0.0
               , directory
               , containers
               , mtl
               , transformers
               , parsec
               , optparse-applicative
               , haddock-api
               , hspec
               , hspec-discover
               , exceptions

  if impl(ghc < 7.7)
      Build-Depends:  Cabal >= 1.10 && < 1.17
  else
      Build-Depends:  Cabal >= 1.18

  hs-source-dirs:   src
  default-language:    Haskell2010

Test-Suite spec
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Main-Is:              Spec.hs
  Hs-Source-Dirs:       test, .
  Type:                 exitcode-stdio-1.0
  Other-Modules:        ImportedFromSpec
  Build-Depends:        base >=4.0 && <5
                      , syb
                      , ghc
                      , ghc-paths
                      , ghc-syb-utils
                      , ghc-mod == 5.5.0.0
                      , monad-journal
                      , filepath
                      , safe
                      , bytestring
                      , process
                      , process-streaming >= 0.9.0.0
                      , directory
                      , containers
                      , mtl
                      , transformers
                      , parsec
                      , optparse-applicative
                      , hspec
                      , hspec-discover
                      , exceptions
                      , haddock-api
  if impl(ghc < 7.7)
      Build-Depends:  Cabal >= 1.10 && < 1.17
  else
      Build-Depends:  Cabal >= 1.18
